// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AllRecipeCatalog component should render component with recipes card 1`] = `
<div
  className="row"
>
  <div
    className="col s12"
  >
    <div
      className="row valign-wrapper"
    >
      <h4
        className="col s8 m10 l11"
      >
        All Recipes
      </h4>
      <span
        className="col s4 m2 l1  right"
        id="view-catalog"
      >
        <Link
          replace={false}
          to="/catalog"
        >
          View All &gt;
        </Link>
      </span>
    </div>
  </div>
  <div>
    <RecipeCatalogCard
      index={0}
      key="1"
      recipe={
        Object {
          "category": "Dinner",
          "description": "Tasty rice",
          "directions": "Do this. Do this. Do that.",
          "downvotes": 0,
          "favorites": 5,
          "id": 1,
          "ingredients": "Rice, tomatoes, salt",
          "preparationTime": 69,
          "title": "Rice",
          "upvotes": 2,
          "votes": 3,
        }
      }
      recipes={
        Object {
          "isFetchingRecipes": false,
        }
      }
      recipesCatalog={
        Array [
          Object {
            "category": "Dinner",
            "description": "Tasty rice",
            "directions": "Do this. Do this. Do that.",
            "downvotes": 0,
            "favorites": 5,
            "id": 1,
            "ingredients": "Rice, tomatoes, salt",
            "preparationTime": 69,
            "title": "Rice",
            "upvotes": 2,
            "votes": 3,
          },
          Object {
            "category": "Breakfast",
            "description": "Tasty yam",
            "directions": "Do this. Do this. Do that.",
            "downvotes": 2,
            "favorites": 4,
            "id": 2,
            "ingredients": "Yam, tomatoes, egg, salt",
            "preparationTime": 50,
            "title": "Yam",
            "upvotes": 5,
            "votes": 5,
          },
        ]
      }
    />
    <RecipeCatalogCard
      index={1}
      key="2"
      recipe={
        Object {
          "category": "Breakfast",
          "description": "Tasty yam",
          "directions": "Do this. Do this. Do that.",
          "downvotes": 2,
          "favorites": 4,
          "id": 2,
          "ingredients": "Yam, tomatoes, egg, salt",
          "preparationTime": 50,
          "title": "Yam",
          "upvotes": 5,
          "votes": 5,
        }
      }
      recipes={
        Object {
          "isFetchingRecipes": false,
        }
      }
      recipesCatalog={
        Array [
          Object {
            "category": "Dinner",
            "description": "Tasty rice",
            "directions": "Do this. Do this. Do that.",
            "downvotes": 0,
            "favorites": 5,
            "id": 1,
            "ingredients": "Rice, tomatoes, salt",
            "preparationTime": 69,
            "title": "Rice",
            "upvotes": 2,
            "votes": 3,
          },
          Object {
            "category": "Breakfast",
            "description": "Tasty yam",
            "directions": "Do this. Do this. Do that.",
            "downvotes": 2,
            "favorites": 4,
            "id": 2,
            "ingredients": "Yam, tomatoes, egg, salt",
            "preparationTime": 50,
            "title": "Yam",
            "upvotes": 5,
            "votes": 5,
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`AllRecipeCatalog component should render component with spinner when fetching recipe 1`] = `
<div
  className="row"
>
  <div
    className="col s12"
  >
    <div
      className="row valign-wrapper"
    >
      <h4
        className="col s8 m10 l11"
      >
        All Recipes
      </h4>
      <span
        className="col s4 m2 l1  right"
        id="view-catalog"
      >
        <Link
          replace={false}
          to="/catalog"
        >
          View All &gt;
        </Link>
      </span>
    </div>
  </div>
  <div
    className="center-align"
  >
    <Spinner
      size="big"
    />
  </div>
</div>
`;

exports[`AllRecipeCatalog component should render the component 1`] = `
<div
  className="row"
>
  <div
    className="col s12"
  >
    <div
      className="row valign-wrapper"
    >
      <h4
        className="col s8 m10 l11"
      >
        All Recipes
      </h4>
      <span
        className="col s4 m2 l1  right"
        id="view-catalog"
      >
        <Link
          replace={false}
          to="/catalog"
        >
          View All &gt;
        </Link>
      </span>
    </div>
  </div>
  <div />
</div>
`;
